[gd_scene load_steps=32 format=2]

[ext_resource path="res://Textures/EasterHead.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Head.gd" type="Script" id=2]
[ext_resource path="res://Hitbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/Action RPG Resources/Shadows/MediumShadow.png" type="Texture" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitbox/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hitbox/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/HeadPlateDetectionZone.tscn" type="PackedScene" id=9]
[ext_resource path="res://sounds/heal.wav" type="AudioStream" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.0
height = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 40.0125

[sub_resource type="CircleShape2D" id=4]
radius = 4.12311

[sub_resource type="CircleShape2D" id=5]
radius = 6.0

[sub_resource type="Animation" id=6]
resource_name = "Float"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Float"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Sleep"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Summon"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=18]
states/Float/node = SubResource( 10 )
states/Float/position = Vector2( 464, 114 )
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 459, 35 )
states/Sleep/node = SubResource( 12 )
states/Sleep/position = Vector2( 658, 114 )
states/Summon/node = SubResource( 13 )
states/Summon/position = Vector2( 274, 114 )
transitions = [ "Summon", "Float", SubResource( 14 ), "Float", "Sleep", SubResource( 15 ), "Sleep", "Idle", SubResource( 16 ), "Idle", "Summon", SubResource( 17 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 4, 3 )

[sub_resource type="CapsuleShape2D" id=21]
radius = 7.0
height = 2.0

[node name="Head" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="Sprite" parent="."]
position = Vector2( 0, -1.46565 )
texture = ExtResource( 1 )
offset = Vector2( 0, -12 )
hframes = 7

[node name="ShadowSprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 0, 2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 800

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 4
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 4 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -15 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 15 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Float = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Sleep = SubResource( 8 )
anims/Summon = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 19 )

[node name="HeadPlateDetectionZone" parent="." instance=ExtResource( 9 )]
collision_layer = 64

[node name="CollisionShape2D" parent="HeadPlateDetectionZone" index="0"]
shape = SubResource( 20 )

[node name="StoneCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 21 )
disabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetection"]

[editable path="Hitbox"]

[editable path="SoftCollision"]

[editable path="HeadPlateDetectionZone"]
